HDFS plugin: add yamlRestTestWeb2 and yamlRestTestWeb3 tests for webhdfs